--- a/frontend/src/styles/bootstrap-custom.scss
+++ b/frontend/src/styles/bootstrap-custom.scss
@@ -2,6 +2,11 @@
 // $body-bg: #000;
 // $body-color: #111;
 
+$input-focus-box-shadow: inset 0 0 0 0.2rem rgb(0 123 255 / 25%);
+$input-btn-focus-box-shadow: 0;
+// $btn-focus-box-shadow: none;
+// $input-btn-focus-box-shadow: inset $input-btn-focus-box-shadow;
+
 // Then import Bootstrap an BootstrapVue SCSS files (order is important)
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 @import "../../node_modules/bootstrap-vue/src/index.scss";
