idk removal of obsolute code. cruft, colors, votes, etc.

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -1,3 +1,4 @@
 @import "@/styles/simpledotcss-custom.scss";
 @import "@/styles/rendered-markdown.scss";
-@import "../../node_modules/highlight.js/styles/default.css"
+@import "../../node_modules/highlight.js/styles/default.css";
+@import "@/styles/buttons.scss"
