use full url for source fetching, refactor segment links out to own component

--- a/frontend/src/styles/mixins.scss
+++ b/frontend/src/styles/mixins.scss
@@ -13,3 +13,17 @@
     }
   }
 }
+
+$mobile-breakpoint: 640px;
+
+@mixin on-mobile {
+  @media (max-width: $mobile-breakpoint) {
+    @content;
+  }
+}
+
+@mixin on-desktop {
+  @media (min-width: $mobile-breakpoint) {
+    @content;
+  }
+}
